--- a/docs/getting-started/what-is-payload.mdx
+++ b/docs/getting-started/what-is-payload.mdx
@@ -1,5 +1,5 @@
 ---
-title: Ajmal What is Payload?
+title: Rana Ajmal What is Payload?
 label: Ajmal What is Payload?
 order: 10
 desc: Payload is a next-gen application framework that can be used as a Content Management System, enterprise tool framework, headless commerce platform, or digital asset management tool.
